src/objects/EventApi__Sponsor_Package__c.object
<CustomObject>
    <description>Sponsor packages track the benefits and levels of sponsorship available for an event.</description>
    <fields>
        <fullName>EventApi__AR_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies the GL Account used for A/R transactions.</description>
        <inlineHelpText>Identifies the GL Account used for A/R transactions.</inlineHelpText>
        <label>A/R Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Sponsor Packages (A/R Account)</relationshipLabel>
        <relationshipName>SponsorPackage_AR_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Adjustment_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The debit account to use when posting invoice adjustments to invoices that have already posted to A/R.</description>
        <inlineHelpText>The debit account to use when posting invoice adjustments to invoices that have already posted to A/R.</inlineHelpText>
        <label>Adjustment Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Items (Sales Adjustment Accounts)</relationshipLabel>
        <relationshipName>Items2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Assignments_Display_Label__c</fullName>
        <description>RESERVED</description>
        <inlineHelpText>Requires &quot;Enable Assignments&quot; to be checked. Text displays at the top of the &quot;Assignments&quot; screen.</inlineHelpText>
        <label>RESERVED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Required Override ** Link to related Business Group. Derived from User Preferences if not defined on record creation.</description>
        <inlineHelpText>** System Calculated Required Override ** Link to related Business Group. Derived from User Preferences if not defined on record creation.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Sponsor Packages</relationshipLabel>
        <relationshipName>Sponsor_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Cost__c</fullName>
        <description>The cost per unit for the item.</description>
        <inlineHelpText>The cost per unit for the item.</inlineHelpText>
        <label>Item Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Defer_Revenue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the deferred revenue recognition rules will be considered when posting transactions.</description>
        <inlineHelpText>When checked, the deferred revenue recognition rules will be considered when posting transactions.</inlineHelpText>
        <label>Defer Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Deferred_Revenue_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deferred Revenue Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Items (Deferred Revenue Account)</relationshipLabel>
        <relationshipName>Items3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Deferred_Revenue_Term__c</fullName>
        <label>Deferred Revenue Term (In Months)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Description__c</fullName>
        <description>Product description.</description>
        <inlineHelpText>Product description.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventApi__Discount_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account to debit when discounting a sale related to the Item.</description>
        <inlineHelpText>The account to debit when discounting a sale related to the Item.</inlineHelpText>
        <label>RESERVED</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Items (Discount Account)</relationshipLabel>
        <relationshipName>Discount_Account_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Display_Name__c</fullName>
        <description>Sponsor package name as you would like it to appear in the Portal.</description>
        <inlineHelpText>Sponsor package name as you would like it to appear in the Portal.</inlineHelpText>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Display_Order__c</fullName>
        <description>Enter the number for the order that the sponsor package should be displayed in.</description>
        <inlineHelpText>Enter the number for the order that the sponsor package should be displayed in.</inlineHelpText>
        <label>Display Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Access_Permissions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, only badge types identified in the &quot;Manage Permissions&quot; related list will have access to this item.</description>
        <inlineHelpText>When checked, only badge types identified in the &quot;Manage Permissions&quot; related list will have access to this item.</inlineHelpText>
        <label>Enable Access Permissions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Enable_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RESERVED</description>
        <inlineHelpText>When checked, sponsor can add contacts to their sponsorship.</inlineHelpText>
        <label>RESERVED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Event_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related event category. When linked, this package will be included automatically in new events created within the same category.</description>
        <inlineHelpText>Link to the related event category. When linked, this package will be included automatically in new events created within the same category.</inlineHelpText>
        <label>Event Category</label>
        <referenceTo>EventApi__Event_Category__c</referenceTo>
        <relationshipLabel>Sponsor Packages (Template)</relationshipLabel>
        <relationshipName>Sponsor_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the related event.</description>
        <inlineHelpText>Link to the related event.</inlineHelpText>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Sponsor Packages</relationshipLabel>
        <relationshipName>Sponsor_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Flex_Day_of_the_Month__c</fullName>
        <label>Flex Day of the Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to a form created in the &quot;Form Builder&quot; app. Customers will see the form when they select the sponsor package to purchase.</description>
        <inlineHelpText>Link to a form created in the &quot;Form Builder&quot; app. Customers will see the form when they select the sponsor package to purchase.</inlineHelpText>
        <label>Sponsor Package Form</label>
        <referenceTo>PagesApi__Form__c</referenceTo>
        <relationshipLabel>Sponsor Packages</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Image_Path__c</fullName>
        <defaultValue>&quot;https://s3.us-east-1.amazonaws.com/fonteva-customer-media/00D1U000000FLVyUAO/WcRwRzNr_placeholder_svg&quot;</defaultValue>
        <description>Image displays in the shopping cart and checkout page.</description>
        <inlineHelpText>Image displays in the shopping cart and checkout page.</inlineHelpText>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Image_URL__c</fullName>
        <description>Secure (&quot;https://&quot;) url where a large, 250 x 250 pixels, image is hosted to display on sponsor related pages and printed materials. Valid image file types include *.gif, *.png, *.jpg. Recommend the file size does not exceed 50kb.</description>
        <inlineHelpText>Secure (&quot;https://&quot;) url where a large, 250 x 250 pixels, image is hosted to display on sponsor related pages and printed materials. Valid image file types include *.gif, *.png, *.jpg. Recommend the file size does not exceed 50kb.</inlineHelpText>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Income_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The credit account to use when posting revenue in a A/R transaction.</description>
        <inlineHelpText>The credit account to use when posting revenue in a A/R transaction or from a cash sale receipt.</inlineHelpText>
        <label>Income Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Items (Income Account)</relationshipLabel>
        <relationshipName>Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Interview_Form_Display_Label__c</fullName>
        <description>Text heading for the sponsor package form.</description>
        <inlineHelpText>Text heading for the sponsor package form.</inlineHelpText>
        <label>Form Display Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Invoice_Payment_Priority__c</fullName>
        <description>If populated, this field is used to identify the order in which partial payments are applied to an invoice.</description>
        <inlineHelpText>If populated, this field is used to identify the order in which partial payments are applied to an invoice.</inlineHelpText>
        <label>Payment Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the item is considered available for sale and will be made available for selection against Invoice, Sales Order, Receipt, and EPayment Lines.</description>
        <inlineHelpText>When checked, the item is considered available for sale and will be made available for selection against Invoice, Sales Order, Receipt, and EPayment Lines.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Contribution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated Override ** Enable contribution (donation) related controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</description>
        <inlineHelpText>** System Calculated Override ** Enable contribution (donation) related controls and features for this Item. Defaults to the value of the same field on the Item&apos;s related Item Class.</inlineHelpText>
        <label>Is Contribution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Tax_Deductible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if the item is a tax deductible donation. The cost per unit will drive the tax deductible amount on the sales order.</description>
        <inlineHelpText>Check if the item is a tax deductible donation. The cost per unit will drive the tax deductible amount on the sales order.</inlineHelpText>
        <label>Is Tax Deductible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Is_Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>** System Calculated Override ** Enable tax specific controls and features for this sponsor package.</description>
        <inlineHelpText>** System Calculated Override ** Enable tax specific controls and features for this sponsor package.</inlineHelpText>
        <label>Is Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Item_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated ** The Item Class for sponsor packages are auto-generated for each event and/or event category based on configurations.</description>
        <inlineHelpText>** System Calculated ** The Item Class for sponsor packages are auto-generated for each event and/or event category based on configurations.</inlineHelpText>
        <label>RESERVED</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Sponsor Packages</relationshipLabel>
        <relationshipName>Sponsor_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates the Sponsorship Package to the Sponsorship Item for its event.</description>
        <inlineHelpText>Relates the Sponsorship Package to the Sponsorship Item for its event.</inlineHelpText>
        <label>RESERVED</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipLabel>Sponsor Packages</relationshipLabel>
        <relationshipName>Sponsor_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Line_Description__c</fullName>
        <description>Short description that appears on receipts and invoices.</description>
        <inlineHelpText>Short description that appears on receipts and invoices.</inlineHelpText>
        <label>Line Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Maximum_Number_of_Assignments__c</fullName>
        <description>RESERVED</description>
        <inlineHelpText>Requires &quot;Enable Assignments&quot; to be checked. Specifies the maximum number of contacts that can be added to the sponsor package.</inlineHelpText>
        <label>RESERVED</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Price__c</fullName>
        <description>The list price of the sponsor package.</description>
        <inlineHelpText>The list price of the sponsor package.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventApi__Quantity_Available__c</fullName>
        <description>Maximum number of this sponsor packages of this type that can be sold for the event.</description>
        <inlineHelpText>Maximum number of this sponsor packages of this type that can be sold for the event.</inlineHelpText>
        <label>Quantity Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Quantity_Remaining__c</fullName>
        <description>The quantity available minus the number sold.</description>
        <formula>IF(EventApi__Quantity_Available__c == 0,0,EventApi__Quantity_Available__c - EventApi__Quantity_Sold__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The quantity available minus the number sold.</inlineHelpText>
        <label>Quantity Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Quantity_Sold__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of sponsor packages of this type sold.</description>
        <inlineHelpText>The number of sponsor packages of this type sold.</inlineHelpText>
        <label>Quantity Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EventApi__Refund_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account to debit when refunding/crediting customers who have purchased this Item.</description>
        <inlineHelpText>The account to debit when refunding/crediting customers who have purchased this Item.</inlineHelpText>
        <label>Refund/Credit Account</label>
        <referenceTo>OrderApi__GL_Account__c</referenceTo>
        <relationshipLabel>Items (Refund_Account)</relationshipLabel>
        <relationshipName>Refund_Account_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventApi__Require_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RESERVED</description>
        <inlineHelpText>When checked, sponsors must specify a contact for all assignments at the time of purchase.</inlineHelpText>
        <label>RESERVED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Restrict_Number_of_Assignments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>RESERVED</description>
        <inlineHelpText>When checked, the system will limit the number of assignments allowed based on the value of the &quot;Maximum Number of Assignments&quot; field. Defaults unchecked.</inlineHelpText>
        <label>RESERVED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EventApi__Revenue_Recognition_Date__c</fullName>
        <label>Revenue Recognition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EventApi__Revenue_Recognition_Rule__c</fullName>
        <label>Revenue Recognition Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Over Time</fullName>
                </value>
                <value>
                    <fullName>Specific Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__Revenue_Recognition_Term_Rule__c</fullName>
        <label>Revenue Recognition Term Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Partial Credit</fullName>
                </value>
                <value>
                    <fullName>Flex Day</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EventApi__SKU__c</fullName>
        <description>A SKU (Stock Keeping Unit) is a unique Item identifier that references attributes associated with the Item and that distinguish it from all other Items primarily used for inventory control and management.</description>
        <inlineHelpText>A SKU (Stock Keeping Unit) is a unique Item identifier that references attributes associated with the Item and that distinguish it from all other Items primarily used for inventory control and management.</inlineHelpText>
        <label>RESERVED</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventApi__Tax_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populate this field for a sponsor package that needs to apply a tax.</description>
        <inlineHelpText>Populate this field for a sponsor package that needs to apply a tax.</inlineHelpText>
        <label>Tax Class</label>
        <referenceTo>OrderApi__Item_Class__c</referenceTo>
        <relationshipLabel>Tax Sponsor Packages</relationshipLabel>
        <relationshipName>Tax_Sponsor_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROEApi__Event_Display_Name__c</fullName>
        <description>**System Calculated** Event Display Name</description>
        <inlineHelpText>**System Calculated** Event Display Name</inlineHelpText>
        <label>SYSTEM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROEApi__Event_Duration_Text__c</fullName>
        <description>**System Calculated** Event Duration Text</description>
        <formula>EventApi__Event__r.ROEApi__Event_Duration_Text__c</formula>
        <inlineHelpText>**System Calculated** Event Duration Text</inlineHelpText>
        <label>SYSTEM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ROEApi__Event_Name__c</fullName>
        <description>**System Calculated** Event Display Name</description>
        <formula>EventApi__Event__r.EventApi__Display_Name__c</formula>
        <inlineHelpText>**System Calculated** Event Display Name</inlineHelpText>
        <label>SYSTEM</label>
        <type>Text</type>
    </fields>
    <label>Sponsor Package</label>
    <listViews>
        <fullName>EventApi__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sponsor Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sponsor Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>